--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@jridgewell/sourcemap-codec": "^1.5.0",
 		"@rollup/plugin-inject": "^5.0.5",
-		"animejs": "^4.0.2"
+		"animejs": "^4.0.2",
+		"lowdb": "^7.0.1"
 	}
 }
