--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@jridgewell/sourcemap-codec": "^1.5.0",
 		"@rollup/plugin-inject": "^5.0.5",
 		"animejs": "^4.0.2",
-		"lowdb": "^7.0.1"
+		"lowdb": "^7.0.1",
+		"uuid": "^11.1.0"
 	}
 }
